--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,12 @@
-.App {
-  text-align: center;
+.App{
+  margin-left: 80px;
+ padding-left: 130px;
+  padding-right: 130px;
+  margin-right: 80px
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (max-width: 600px) {
+  .App{
+    margin: 0px 0px;
+    padding: 0px 10px;
   }
 }
